fix al view visibility && viewer loading when no image available

--- a/src/assets/sass/components/_iiifviewer.scss
+++ b/src/assets/sass/components/_iiifviewer.scss
@@ -1,8 +1,6 @@
-.iiifviewer {
 
-}
 
 .iiif-viewer-placeholder {
     width: 90%;
-    height: 100%;
+    //height: 100%;
 }
